# SUPERHEX

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.rst  input_format.rst  installation.rst  intro.rst  make.bat  requirements.txt  tutorial.rst
src/four_state/: README.md  all_valid_neighbors.csv  filtered_neighbors.txt  find-cell.py  pairs.py  params-find.in  params.in
src/superhex/: __init__.py  compare_structures.py  generate_supercell.py  hnf_lib.py  input.txt  superhex.py
src/tools/: MnTe.vasp  MnTe.vasp-2x3x4.vasp  README.md  configs.txt  find_the_first_dependent_column.py  generate_rand_configs.py  make_supercell.py  plot_analysis.py
tests/: test_superhex.py
tests/2D_examples/CrCl3/: CrCl3.vasp  input.txt  log.txt  struct_analysis.csv
tests/2D_examples/CrCl3/supercells/: cell-vol1-num0.vasp  cell-vol10-num0.vasp  cell-vol10-num1.vasp  cell-vol10-num2.vasp  cell-vol11-num0.vasp  cell-vol12-num0.vasp  cell-vol12-num1.vasp  cell-vol12-num2.vasp  cell-vol12-num4.vasp  cell-vol12-num5.vasp  cell-vol12-num6.vasp  cell-vol13-num0.vasp  cell-vol14-num0.vasp  cell-vol14-num1.vasp  cell-vol14-num2.vasp  cell-vol15-num0.vasp  cell-vol15-num1.vasp  cell-vol15-num2.vasp  cell-vol15-num3.vasp  cell-vol16-num0.vasp  cell-vol16-num1.vasp  cell-vol16-num2.vasp  cell-vol16-num3.vasp  cell-vol16-num4.vasp  cell-vol16-num5.vasp  cell-vol16-num6.vasp  cell-vol2-num0.vasp  cell-vol3-num0.vasp  cell-vol4-num0.vasp  cell-vol4-num1.vasp  cell-vol4-num2.vasp  cell-vol5-num0.vasp  cell-vol6-num0.vasp  cell-vol6-num1.vasp  cell-vol6-num2.vasp  cell-vol7-num0.vasp  cell-vol8-num0.vasp  cell-vol8-num1.vasp  cell-vol8-num2.vasp  cell-vol8-num3.vasp  (+3 more)
tests/2D_examples/GeTe2Fe3/: GeTe2Fe3-1.vasp  input.txt  log.txt  struct_analysis.csv
tests/2D_examples/GeTe2Fe3/supercells/: cell-vol1-num0.vasp  cell-vol10-num0.vasp  cell-vol10-num1.vasp  cell-vol10-num2.vasp  cell-vol11-num0.vasp  cell-vol12-num0.vasp  cell-vol12-num1.vasp  cell-vol12-num2.vasp  cell-vol12-num4.vasp  cell-vol12-num5.vasp  (+33 more)
tests/2D_examples/NiI2/: NiI2.vasp  input.txt  log.txt  struct_analysis.csv
tests/bulk_examples/Fe2O3/: Fe2O3.vasp  input.txt  log.txt  struct_analysis.csv
tests/bulk_examples/MnTe/: input.txt  log.txt  struct_analysis.csv
tests/bulk_examples/NiO/: NiO.vasp  input.txt  log.txt  struct_analysis.csv
tests/bulk_examples/NiO_primitive/: NiO.vasp  input.txt  log.txt  struct_analysis.csv
(+1276 files in other folders)
