[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "superhex"
version = "1.0.0"
description = "Supercell structure optimization for Heisenberg exchange interaction calculations"
authors = ["Mojtaba Alaei <malaei@iut.ac.ir>"]
packages = [
    { include = "superhex", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"  # Specify the Python version you're using
numpy = "^1.26"   # Update to the version you're using
pymatgen = "^2024.8.9"  # Update to the version you need
ase = "^3.23"     # Update to the version you need
sympy = "^1.12"   # Update to the version you need
pandas = "^2.2"   # Update to the version you need
numba = "^0.59"   # Update to the version you need
tqdm = "^4.66"    # Update to the version you need
myst_nb = "^1.1"
autoapi = "^2.0"

[tool.poetry.scripts]
superhex = "superhex.superhex:main"  # Entry point if applicable
